--- a/students/templates/students/faq.html
+++ b/students/templates/students/faq.html
@@ -9,4 +9,56 @@
             </div>
         </div>
     </div>
+
+    <div class="container ">
+    <div class="panel-group" id="faqAccordion">
+        <div class="panel panel-default ">
+            <div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question0">
+                 <h4 class="panel-title">
+                    <a href="#" class="ing">Q: What is RoomService?</a>
+              </h4>
+
+            </div>
+            <div id="question0" class="panel-collapse collapse" style="height: 0px;">
+                <div class="panel-body">
+                     <h5><span class="label label-primary">Answer</span></h5>
+
+                    <p>The basic goal of RoomService is to provide information about which rooms are available, in real time, during Hamilton's housing lotteries. It provides up to date information about residence halls and their rooms. RoomService does not provide any way for students to select a room - all of the lotteries must still be attended in person.</p>
+                </div>
+            </div>
+        </div>
+        <div class="panel panel-default ">
+            <div class="panel-heading accordion-toggle collapsed question-toggle" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question1">
+                 <h4 class="panel-title">
+                    <a href="#" class="ing">Q: How do I use RoomService?</a>
+              </h4>
+
+            </div>
+            <div id="question1" class="panel-collapse collapse" style="height: 0px;">
+                <div class="panel-body">
+                     <h5><span class="label label-primary">Answer</span></h5>
+
+                    <p>To view available rooms by building, select a building from the sidebar on the left (accessible by pressing the menu button in the upper left corner). To view all available rooms, select "View all rooms" from the sidebar. Building pages display a list of all available rooms and apartments, as well as floor plans.</p>
+                </div>
+            </div>
+        </div>
+        <div class="panel panel-default ">
+            <div class="panel-heading accordion-toggle collapsed question-toggle" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question2">
+                 <h4 class="panel-title">
+                    <a href="#" class="ing">Q: I still have questions!</a>
+              </h4>
+
+            </div>
+            <div id="question2" class="panel-collapse collapse" style="height: 0px;">
+                <div class="panel-body">
+                     <h5><span class="label label-primary">Answer</span></h5>
+
+                    <p>For support, shoot us an email at <a class="nodecor highlight-link" href="mailto:roomservice@gmail.com">roomservice@gmail.com</a> For lottery questions, contact Ashley Place, assistant director of the office of residential life, at <a class="nodecor highlight-link" href="mailto:aplace@hamilton.edu">aplace@hamilton.edu</a></p>
+                </div>
+            </div>
+        </div>
+        
+    </div>
+    <!--/panel-group-->
+</div>
 {% endblock content %}
