Some home page changes

--- a/students/static/students/home/home-roomservice.css
+++ b/students/static/students/home/home-roomservice.css
@@ -1,3 +1,7 @@
+#home-jumbotron {
+    background-color: white;
+}
+
 a {
     color: #d1d1d1;
 }
@@ -6,11 +10,6 @@ a:hover,
 a.active {
     color: #002f86;
     text-decoration: none;
-}
-
-#home-jumbotron {
-    padding-bottom: 10px;
-    padding-top: 10px;
 }
 
 .landing-panel-title {
