--- a/students/templates/students/faq.html
+++ b/students/templates/students/faq.html
@@ -53,7 +53,7 @@
                 <div class="panel-body">
                      <h5><span class="label label-primary">Answer</span></h5>
 
-                    <p>For support, shoot us an email at <a class="nodecor highlight-link" href="mailto:roomservice@gmail.com">roomservice@gmail.com</a> For lottery questions, contact Ashley Place, assistant director of the office of residential life, at <a class="nodecor highlight-link" href="mailto:aplace@hamilton.edu">aplace@hamilton.edu</a></p>
+                    <p>For support, shoot us an email at <a class="nodecor highlight-link" href="mailto:hcroomservice@gmail.com">hcroomservice@gmail.com</a>. For lottery questions, contact Ashley Place, assistant director of the office of residential life, at <a class="nodecor highlight-link" href="mailto:aplace@hamilton.edu">aplace@hamilton.edu</a></p>
                 </div>
             </div>
         </div>
