--- a/students/templates/students/base.html
+++ b/students/templates/students/base.html
@@ -44,41 +44,45 @@
       {% block sidebar %}
             {% include "students/sidebar.html" %}
       {% endblock sidebar %}
-    
+
       <div id="main">
           {% block content %}
-          <div class="col-md-12" id="home-jumbotron">
-                <h1>
-                {% if pageContent %}
-                    {{pageContent.header_text}}
-                {% else %}
-                    Let the search begin!
-                {% endif %}
-                </h1>
-              
-                <p class="lead">
-                {% if pageContent %}
-                    {{ pageContent.header_subtext|linebreaksbr }}
-                {% else %}
-                    Select a building from the left sidebar to view room availability by building.
-                {% endif %}
-                </p>
-                {% if pageContent %}
-                    {% if pageContent.header_block_text %}
-                        {{ pageContent.header_block_text|linebreaks }}
+          <div class="col-md-12 text-center">
+              <div class="jumbotron" id="home-jumbotron">
+                    <h1>
+                    {% if pageContent %}
+                        {{pageContent.header_text}}
+                    {% else %}
+                        Let the search begin!
                     {% endif %}
-                {% endif %}
-                <hr class="yellow-line">
-          </div>
+                    </h1>
 
-          <div class="col-md-6">
+                    <p>
+                    {% if pageContent %}
+                        {{ pageContent.header_subtext|linebreaksbr }}
+                    {% else %}
+                        Select a building from the left sidebar to view room availability by building.
+                    {% endif %}
+                    </p>
+                    {% if pageContent %}
+                        {% if pageContent.header_block_text %}
+                            {{ pageContent.header_block_text|linebreaks }}
+                        {% endif %}
+                    {% endif %}
+                    <a class="btn btn-default btn-lg hidden-lg hidden-md" href="{% url 'faq' %}">FAQs</a>
+                    <a class="btn btn-default btn-lg hidden-lg hidden-md" data-toggle="offcanvas" data-target=".sidebar" href="#">Search</a>
+              </div>
+              <hr class="yellow-line">
+          </div><!--/container-->
+
+          <div class="col-md-6 hidden-xs hidden-sm">
               <div class="landing-panel panel landing-panel-button hidden-sm hidden-md hidden-lg">
                 <div class="landing-panel-heading container-fluid" data-toggle="offcanvas" data-target=".sidebar" href="#" style="clear: both;">
                     <h3 class="landing-panel-title" style="float: left;">Start Your Search</h3>
                     <h3 class="landing-panel-title" style="float: right;"><span class="glyphicon glyphicon-chevron-right"></span></h3>
                   </div>
               </div>
-              
+
               <a href="{% url 'faq' %}" class="nodecor hidden-sm hidden-md hidden-lg" id="faq-button">
                    <div class="landing-panel panel landing-panel-button nodecor">
                        <div class="landing-panel-heading container-fluid nodecor" style="clear: both;">
@@ -87,7 +91,7 @@
                         </div>
                    </div>
               </a>
-              
+
                <a href="{% url 'faq' %}" class="nodecor hidden-xs" id="faq-button">
                    <div class="landing-panel panel landing-panel-button nodecor">
                        <div class="landing-panel-heading container-fluid nodecor" style="clear: both;">
@@ -96,13 +100,13 @@
                         </div>
                    </div>
               </a>
-              
-          </div>
+
+          </div><!--/col-->
 
           <div class="col-md-6">
               <div class="landing-panel panel">
                 <div class="landing-panel-heading container-fluid">
-                    <h3 class="landing-panel-title" style="float: left;">Contact</h3>
+                    <h3 class="landing-panel-title" style="float: left;">Contact Us</h3>
                 </div>
                 <div class="panel-body">
                     {% if pageContent %}
@@ -110,9 +114,10 @@
                     {% else %}
                         Questions pertaining to the lottery and the lottery process should be directed to Ashley Place, assistant director of Residential Life, at <a class="nodecor highlight-link" href="mailto:aplace@hamilton.edu">aplace@hamilton.edu</a>.
                     {% endif %}
+                    Send comments or questions about this site to <a href="mailto:hcroomservice@gmail.com">HCRoomService@gmail.com</a>.
                 </div>
-              </div>
-          </div>
+              </div><!--/panel-->
+          </div><!--/col-->
 
         {% endblock content %}
       </div>
