--- a/students/static/students/footer/footer.css
+++ b/students/static/students/footer/footer.css
@@ -5,6 +5,32 @@
     font-family: 'Khula', sans-serif;
 }
 */
-.footer-text{
-    font-family: 'Khula', sans-serif;
+
+.navbar-fixed-bottom {
+    border-top: 1px solid #cdcdcd;
+    display: block;
+    background-color: white;
 }
+
+.footer-text {
+    margin-top: 15px;
+    font-family: 'Khula', sans-serif;
+    /*margin-bottom: 15px;*/
+}
+
+@media screen and (max-width: 370px) {
+    .hidden-xxs {
+        display: none;
+    }
+}
+
+a {
+    color: #002f86;
+}
+
+a:hover,
+a.active {
+    color: #d1d1d1;
+    text-decoration: none;
+}
+   
