--- a/students/templates/students/faq.html
+++ b/students/templates/students/faq.html
@@ -6,11 +6,12 @@
         <div class="row">
             <div class="col-md-12">
                 <h1>FAQ</h1>
+                <hr class="yellow-line">
             </div>
         </div>
     </div>
 
-    <div class="container ">
+    <div class="container-fluid">
     <div class="panel-group" id="faqAccordion">
         <div class="panel panel-default ">
             <div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question0">
