--- a/students/templates/students/footer.html
+++ b/students/templates/students/footer.html
@@ -1,13 +1,8 @@
 <div class="navbar navbar-fixed-bottom">
   <div class="container-fluid">
-  <hr>
-    <div class="col-lg-12">
-      <div class="col-md-0">
-          <!-- can insert hyper links here -->
-      </div>
-      <div class="col-md-12">
-        <p class="muted pull-left footer-text" >Hamilton College Computer Science</p>
-      </div>
+    <div class="col-md-12">
+        <p class="muted pull-left footer-text hidden-xxs">Hamilton College Computer Science</p>
+        <a class="pull-right footer-text" href="{% url 'contact' %}">Contact Us</a>
     </div>
   </div>
 </div>
