--- a/students/templates/students/header.html
+++ b/students/templates/students/header.html
@@ -24,7 +24,7 @@
 </nav><!--/.navbar -->
 {% if pageContent %}
   {% if pageContent.navbar_announcement %}
-    <div class="alert alert-danger" role="alert">
+    <div class="alert alert-danger navbar-announcement" role="alert">
       <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
       {{ pageContent.navbar_announcement}}
     </div>
