--- a/students/static/students/header/header-roomservice.css
+++ b/students/static/students/header/header-roomservice.css
@@ -7,6 +7,14 @@
 
 .navbar-announcement {
     margin-bottom: 0px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    border-radius: 0px;
+    border: none;
+    background-color: #b91823;
+    color: white;
+    text-align: center;
+    font-family: 'Khula', 'Helvetica Neue', Helvetica, sans-serif;
 }
 
 .navbar-toggle {
