--- a/students/templates/students/building.html
+++ b/students/templates/students/building.html
@@ -24,15 +24,12 @@
 {% endblock %}
 
 {% block content %}
-    <a name="top"></a><!-- top anchor -->
-    <div class="row">
-
       {% if floor_images %}
-        <div class="col-md-7 container-fluid left-content">
+        <div class="col-md-12 col-lg-6 container-fluid left-content">
       {% else %}
         <div class="col-md-12">
       {% endif %}
-
+        <a name="top"></a><!-- top anchor -->
         <h1 id="page-title">
             {{current_building.name}} <small style="vertical-align: middle">
                 {% if current_building.closed_to == 'F' %}
@@ -108,7 +105,7 @@
 
             {% if floor_images %}
             <!-- Link to floor plan images if small screen -->
-            <div class="col-md-7 hidden-md hidden-lg">
+            <div class="col-md-6 hidden-md hidden-lg">
                <a href="#floorPlans" class="nodecor" id="floorPlanViewButton">
                    <div class='sticky-anchor'></div>
                    <div class="panel panel-green panel-default nodecor sticky">
@@ -399,7 +396,7 @@
                                <h3 class="panel-title-green nodecor floorplan-button" id="floorplan-photo-icon">
                                     <span class="glyphicon glyphicon-chevron-up" aria-hidden="true"></span>
                                </h3>
-                               
+
                                <h3 class="panel-title-green nodecor floorplan-button" id="floorplan-text">
                                     Back to Top
                                </h3>
@@ -416,12 +413,14 @@
 
 <!-- FLOOR PLANS!! -->
     {% if floor_images %}
-    <div class="col-md-5 col-xs-12 right-content">
+    <div class="col-xs-12 col-md-12 col-lg-6 right-content">
 
     {% with first_image=floor_images|first %}
     <div class="floorplans container-fluid">
         <a name="floorPlans"></a>
-        <h1 id="floor-name" class="panel-title">{{first_image.display_name}}</h1>
+        <h1 id="floor-name" class="floorplan-title">
+          {{first_image.display_name}}
+        </h1>
 
 
         <img src="{{first_image.image.url}}"
@@ -429,9 +428,11 @@
 
     {% endwith %}
 
-    <div class="row thumbnails">
+    <div class="row thumbnail-row">
+
         {% for floorplan in floor_images %}
-            <div class="thumb-div" id="thumbnail-gallery">
+        <div class="col-xs-4 col-sm-6 col-md-4 col-lg-3 thumb-div">
+            <div id="thumbnail-gallery">
                 {% if forloop.first %}
                 <a class="active thumbnail" data-image="{{floorplan.image.url}}" data-zoom-image="{{floorplan.image.url}}">
                 {% else %}
@@ -443,10 +444,11 @@
                     </div>
                 </a>
             </div>
+          </div>
         {% endfor %}
     </div>
     </div>
-  </div>
+  <!-- </div> -->
   {% endif %}
 
 {% endblock content %}
