Changes to building page. Issue with bottom margin. Some extra padding in  some places.

--- a/students/templates/students/base.html
+++ b/students/templates/students/base.html
@@ -36,7 +36,7 @@
     <![endif]-->
   </head>
 
-  <body style = "padding-bottom: 50px">
+  <body>
       {% block header %}
             {% include "students/header.html" %}
       {% endblock header %}
