Fixed some stuff in EditRoom and made EditBuilding actually work

--- a/staff/templates/staff/edit/room.html
+++ b/staff/templates/staff/edit/room.html
@@ -44,17 +44,20 @@
                 <form method="POST" class="post-form form-horizontal" action="{{Action}}">
                 {% csrf_token %}
                 <div class="container-fluid">
-                {% for field in form %}
+                {% for field in form.hidden_fields %}
+                    {{field}}
+                {% endfor %}
+                {% for field in form.visible_fields %}
                     <div class="form-group form-group-lg">
                         <label for="FormInput" class="control-label">{{field.label}}</label>
-                        <div>{{field}}</div>
+                        <div>{{field}}{{field.help_text}}</div>
                     </div>
                 {% endfor %}
                 </div>
                 
                 <!--{{form.as_p}}-->
                 <button type="submit" class="save btn btn-default btn-lg">
-                    Save
+                    Next
                 </button>
                 </form>
             </div>
