--- a/staff/templates/staff/header.html
+++ b/staff/templates/staff/header.html
@@ -24,7 +24,7 @@
                   <a class="dropdown-toggle" data-toggle="dropdown" href="{% url 'edit' %}">Edit Options <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                       <li><a href="{% url 'edit-room-select' %}">Room</a></li>
-                      <li><a href="{% url 'edit-building-select' %}">Building</a></li>
+                      <li><a href="{% url 'edit-building' %}">Building</a></li>
                       <li><a href="{% url 'review-room' %}">Transaction</a></li>
                       <li role="separator" class="divider"></li>
                       <li><a href="{% url 'edit' %}">View all options</a></li>
