--- a/staff/templates/staff/edit/edit.html
+++ b/staff/templates/staff/edit/edit.html
@@ -57,7 +57,7 @@
                   </div>
 
                   <div class="col-md-6">
-                      <a href="{% url 'edit-building-select' %}" class="nodecor">
+                      <a href="{% url 'edit-building' %}" class="nodecor">
                         <div class="landing-panel panel panel-info">
                             <div class="landing-panel-heading">
                                 <h3 class="landing-panel-title">Edit a building</h3>
