--- a/students/static/students/building/building-roomservice.css
+++ b/students/static/students/building/building-roomservice.css
@@ -169,31 +169,71 @@
     -webkit-overflow-scrolling: touch;
 }
 
+body, html {
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
+
+.left-content{
+  height: 100%;
+  position:relative;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+.right-content{
+  float:left;
+  height: 100%;
+  overflow: hidden;
+  background-color: #efefef;
+}
+
+@media (max-width: 1200px){
+  .right-content{
+    height: auto;
+  }
+
+  .left-content{
+    height: auto;;
+    overflow: hidden;
+  }
+
+  body, html {
+    overflow: inherit;
+  }
+}
+
+#main{
+  padding:0px;
+}
+
 /* -------------------------
        Floor Plan Images
    ------------------------- */
-.right-content{
-    float: right;
+.floorplan-title{
+  padding:5px;
+  margin-bottom: 0px;
+  margin-top: 5px;
+  text-transform: uppercase;
+  font-family: 'Proza Libre', sans-serif;
+  font-weight: 300;
+  letter-spacing: 1.2px;
+  line-height: 1.7;
+  font-size: 1.5rem;
 }
 
-.floorplans{
-   position: inherit;
-   padding-top: 15px;
-   background-color: #a9a9a9;
-   margin-bottom: 15px;
-   margin-left: -15px;
-   margin-right: -15px;
-   padding-left: 5px;
-   padding-right: 5px;
-   float: right;
+@media (max-width: 1500px) and (min-width: 1200px){
+  .thumb-div{
+    width:33%;
+  }
 }
-.thumbnails {
-   margin-left: -4px;
-   margin-right: -4px;
-   padding-right: 8px;
-   display:table;
-   border-collapse: collapse;
+
+@media (max-width: 1200px) and (min-width: 992px){
+  .thumb-div{
+    width:25%%;
+  }
 }
+
 
 .thumbnail-label {
     top:0;
@@ -206,20 +246,20 @@
 .thumb-div {
     padding-right: 4px;
     padding-left: 4px;
-    display: table-cell;
-    vertical-align: top;
-}
 
-.thumb-div img{
-  display: block;
-  width:100%;
 }
 
 .thumbnail {
     border-radius: 0;
+    margin-bottom: 8px;
     position:relative;
     text-align: left;
     vertical-align: middle;
+}
+
+.thumbnail-row{
+  padding-left: 11px;
+  padding-right: 11px;
 }
 
 /* get rid of upper margin only when the floor plan/room panels are displaying next to each other */
@@ -227,14 +267,7 @@
     #floorPlanName {
         margin-top: 0px;
     }
-    /* Fix the floorplan viewer to the top corner */
-    .floorplans{
-      position: fixed;
-      top:80px;
-      height: 100%;
-      margin-right: 15px;
-    }
-
+ 
     /* Shift the thumbnail labels down a bit */
     .thumbnail-label{
       padding: 5px;
